# rulatro

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: hardcoded-audit.yml
assets/: README.md  antes.json  blinds.json  card_attributes.json  card_debuff_rules.json  card_draw_facedown_rules.json  decks.json  economy.json  hands.json  ranks.json  shop.json  vouchers.json
assets/content/: bosses.dsl  jokers.dsl  named_effect_mixins.json  planets.json  spectrals.json  tags.dsl  tarots.json
crates/autoplay/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/cui/: Cargo.toml
crates/cui/src/: actions.rs  app.rs  input.rs  lib.rs  main.rs  persistence.rs  view.rs
crates/data/: Cargo.toml  card_modifiers.json
crates/modding/: Cargo.toml
crates/modding/src/: api.rs  lib.rs  loader.rs  runtime.rs
crates/modding/src/runtime/: runtime_lua.rs  runtime_wasm.rs
crates/web/: Cargo.toml
docs/: README.md  architecture.md  autoplay.md  content_effects.md  cui_early_access.md  doc_standards.md  game_design_patterns.md  gameplay_engineering.md  modding.md  modding_develop.md  offboarding_exit.md  onboarding_entry.md  player_gameplay_guide.md  release_engineering.md  rules.md  testing_strategy.md  troubleshooting.md  web_frontend.md
docs/modding/: hardcoded_behavior.md  (+5 more)
mods/: sample.lua
tools/: apply_patch.sh  check_wiki_alignment.py  extract_jokers.py  hardcoded_behavior_contract.json  moddev.py  test_counts.py  wiki_fetch.py
web/: app.js  index.html  styles.css
wiki_cache/: index.json
(+232 files in other folders)
