[package]
name = "rulatro-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
rulatro-core = { path = "../core" }
rulatro-autoplay = { path = "../autoplay" }
rulatro-cui = { path = "../cui" }
rulatro-data = { path = "../data" }
rulatro-modding = { path = "../modding" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
