[package]
name = "rulatro-cui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.29"
rulatro-core = { path = "../core" }
rulatro-data = { path = "../data" }
rulatro-modding = { path = "../modding" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
